<resources>
    <string name="app_name">Doorstep</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">Logo</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="or">OR</string>
    <string name="google">Google</string>
    <string name="default_web_Client_id">979561888149-69338th91v564r7nlcioc9opocv6mv54.apps.googleusercontent.com</string>
    <string name="title_activity_customer_home">CustomerHomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="painting">Painting</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="search_for_fruits_vegetables_groceries_etc">Search for fruits, vegetables, groceries, etc.</string>
    <string name="sent_to">Sent to</string>
    <string name="categories">Categories</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="title_activity_maps_final">MapsActivityFinal</string>
    <string name="item">item</string>
    <string name="delete_item">Delete item</string>
    <string name="minus">Minus</string>
    <string name="plus">Plus</string>
    <string name="cart">Cart</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="orders">Orders</string>
    <string name="your_order">Your order</string>
    <string name="quantity">Quantity</string>
    <string name="minutes_to_deliver">minutes to deliver</string>
    <string name="deliveryboyname">DeliveryBoyName</string>
    <string name="order_details">Order Details</string>
    <string name="calldeliveryboy">callDeliveryBoy</string>
    <string name="dropdownmenu">dropdownMenu</string>
    <string name="enter_delivery_address">Enter Delivery Address</string>
    <string name="cart_empty">Cart Empty</string>
    <string name="no_orders">No orders</string>
    <string name="no_favorites_set">No favorites</string>
    <string name="otp">OTP</string>
    <string name="submit_otp">Submit OTP</string>
    <string name="get_otp">Get OTP</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="retry">Retry</string>
    <string name="close">Close</string>
    <string name="loadingDuarationInMillis">5000</string>
</resources>