<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_painting"
        android:icon="@drawable/ic_baseline_fact_check_24"
        android:title="@string/orders" />

<!--    <item-->
<!--        android:id="@+id/navigation_cart"-->
<!--        android:icon="@drawable/ic_baseline_shopping_cart_24"-->
<!--        android:title="@string/cart" />-->

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorites" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile" />

</menu>