<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/customer_home_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.doorstep.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_cartFragment"
            app:destination="@id/cartFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_painting"
        android:name="com.example.doorstep.fragments.PaintingFragment"
        android:label="@string/painting"
        tools:layout="@layout/fragment_painting" >
        <action
            android:id="@+id/action_navigation_painting_to_ordersProductsFragment"
            app:destination="@id/ordersProductsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.doorstep.fragments.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.doorstep.fragments.ProfileFragment"
        android:label="@string/profile"
         />
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.example.doorstep.fragments.CartFragment"
        android:label="fragment_cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/ordersProductsFragment"
        android:name="com.example.doorstep.fragments.OrdersProductsFragment"
        android:label="fragment_orders_products"
        tools:layout="@layout/fragment_orders_products" />

</navigation>