<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

<!--        OTP and mobile number design-->

        <LinearLayout
            android:id="@+id/phoneNumberContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_corner_bg"
            android:orientation="vertical"
            android:elevation="16dp"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo">

            <EditText
                android:id="@+id/edittext_mobile"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edittext_round"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:padding="8dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_getOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_gradient_bg"
                android:hint="@string/get_otp"
                android:inputType="phone"
                android:padding="8dp"
                android:textColor="#FFFFFF" />

        </LinearLayout>

<!--Otp Container-->

        <LinearLayout
            android:id="@+id/otpContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_corner_bg"
            android:orientation="vertical"
            android:elevation="16dp"
            android:padding="16dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo">

            <EditText
                android:id="@+id/edittext_otp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edittext_round"
                android:hint="@string/otp"
                android:inputType="phone"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:padding="8dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_checkOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_gradient_bg"
                android:hint="@string/submit_otp"
                android:inputType="phone"
                android:padding="8dp"
                android:textColor="#FFFFFF" />

        </LinearLayout>

<!--        "OR" text design-->

        <RelativeLayout
            android:visibility="invisible"
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@+id/otpContainer"
            tools:layout_editor_absoluteX="16dp">

            <TextView
                android:id="@+id/TextView_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/or"
                android:textColor="@color/primary_theme_color"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toStartOf="@id/TextView_or"
                android:background="@color/primary_theme_color" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@id/TextView_or"
                android:background="@color/primary_theme_color" />

        </RelativeLayout>

        <ImageButton
            android:visibility="invisible"
            android:id="@+id/main_google_login"
            android:layout_width="184dp"
            android:layout_height="40dp"
            android:background="#fff"
            android:contentDescription="@string/google"
            android:scaleType="fitXY"
            android:src="@drawable/google"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
