<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".activities.CartActivity">


<ScrollView
    android:id="@+id/scrollView_cart"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_cartHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/text_black"
            android:textSize="@dimen/textSizeHeading"
            android:text="@string/cart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_products"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_cartHeading" />

        <TextView
            android:id="@+id/textView_totalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/textView_totalAmountHeading"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textView_totalAmountHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/total"
            android:textColor="@color/text_black"
            android:textSize="@dimen/textSizeHeading"
            app:layout_constraintTop_toBottomOf="@id/recyclerView_products"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_checkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_gradient_bg"
            android:text="@string/checkout"
            android:textAllCaps="false"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/recyclerView_products"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_goneMarginEnd="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>



</layout>