<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/product_bg"
    android:elevation="8dp"
    android:orientation="horizontal"
    android:weightSum="5">

    <ImageView
    android:id="@+id/imageView_productImg"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="2"
    android:contentDescription="@string/item"
    android:scaleType="fitXY"
    android:src="@drawable/logo"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3">

        <LinearLayout
            android:id="@+id/linearLayoutTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_itemHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="3"
                    android:textColor="#000000"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/textView_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/textView_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <ImageButton
                android:id="@+id/imageButton_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="23dp"
                android:backgroundTint="#00000000"
                android:contentDescription="@string/delete_item"
                android:minHeight="48dp"
                app:srcCompat="@drawable/ic_baseline_delete_forever_24" />

        </LinearLayout>





        <ImageButton
            android:id="@+id/imageButton_minus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="44dp"
            android:layout_marginVertical="8dp"
            android:backgroundTint="#00000000"
            android:contentDescription="@string/minus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView_quantity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutTop"
            app:srcCompat="@drawable/ic_baseline_remove_circle_outline_24"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/imageButton_plus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#00000000"
            android:contentDescription="@string/plus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_quantity"
            app:srcCompat="@drawable/ic_baseline_add_circle_outline_24"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

        <TextView
            android:id="@+id/textView_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageButton_plus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageButton_minus" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>



